<resources>
    <string name="app_name">TripsViet</string>
    <string name="slogan">Khám phá để trải nghiệm</string>
    <string name="intro_one_des">Tiếp cận dễ dàng hơn với bài viết, địa danh và người dùng khác</string>
    <string name="intro_one">Tiếp cận dễ dàng</string>
    <string name="intro_two">Chia sẻ kinh nghiệm</string>
    <string name="intro_two_des">Dễ dàng chia sẻ kinh nghiệm du lịch và trải nghiệm thú vị qua bài viết</string>
    <string name="intro_three">“Mỗi năm một lần, hãy khám phá một điểm đến xa lạ mà bạn chưa từng ghé thăm”</string>
    <string name="follow_more">Follow more</string>
    <string name="skip_intro"><u>Skip</u></string>
    <string name="sign_up">Đăng ký</string>
    <string name="sign_up_acc">Đăng ký tài khoản</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="remember_me">Ghi nhớ đăng nhập ?</string>
    <string name="des_sign_in">Đăng nhập để tạo, khám phá và kết nối với cộng đồng du lịch Việt Nam.</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="input_your_phone">Nhập số điện thoại của bạn</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="continue_text">Tiếp tục</string>
    <string name="send_code_des">Mã xác nhận sẽ được gửi tới số điện thoại của bạn trong giây lát!</string>
    <string name="code">Mã xác nhận</string>
    <string name="term_privacy_policy">Tôi chấp nhận <strong><u>Điều khoản</u></strong> &amp; <strong><u>Chính sách bảo mật</u></strong></string>
    <string name="send_code"><u>Gửi mã?</u></string>
    <string name="send_code_again"><u>Gửi lại mã?</u></string>
    <string name="confirm">Xác nhận</string>
    <string name="input_new_password">Nhập mật khẩu mới</string>
    <string name="input_again_password">Nhập lại mật khẩu</string>
    <string name="password_request">Mật khẩu yêu cầu đặt 8 - 20 ký tự bao gồm chữ hoa, chữ thường và ký tự đặc biệt!\n</string>
    <string name="change_password_des">Xác nhận thành công. \n Thay đổi mật khẩu mới !</string>
    <string name="input_your_info">Nhập thông tin của bạn</string>
    <string name="hometown">Quê quán</string>
    <string name="birthday">Sinh nhật</string>
    <string name="fullname">Họ và tên</string>
    <string name="acction_home">Trang chủ</string>
    <string name="acction_up">Đăng bài</string>
    <string name="acction_personal">Cá nhân</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="internet">Vui lòng kiểm tra kết nối internet!</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
</resources>