<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Intro.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="80dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_colorful" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="60dp"
            android:text="@string/intro_three"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="5"
                android:id="@+id/register_introthree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/custom_button_white"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textColor="@color/purple_primary"
                android:textSize="16sp" />

            <Button
                android:textStyle="bold"
                android:layout_weight="5"
                android:id="@+id/login_introthree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/custom_button"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
        <TextView
            android:gravity="bottom"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/follow_more"
            android:textColor="@color/purple_primary"
            android:textSize="16sp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageButton
            android:id="@+id/facebook_intro"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:src="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/instagram_intro"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:src="@drawable/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/twitter_intro"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:src="@drawable/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
</LinearLayout>