<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Intro.MainActivity">

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/skip_intro_introone"
                android:textStyle="bold"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:text="@string/skip_intro"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <ImageView
                android:src="@drawable/skip"
                android:layout_width="24dp"
                android:layout_height="24dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/intro_one_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/intro_one"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="120dp"
            android:text="@string/intro_one_des"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />



    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="8dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:src="@drawable/intro_one" />
    </LinearLayout>
</LinearLayout>