<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_reset_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Intro.MainActivity">
    <View
        android:background="@drawable/icon_wave_background_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:ignore="MissingConstraints">

    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/password_user"
                android:background="@drawable/custom_button_white_circle"
                android:layout_width="120dp"
                android:layout_height="120dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/change_password_des"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/icon_eye_selector"
            app:hintTextColor="@color/text_color_hint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"

                android:background="@drawable/custom_edittext"
                android:hint="@string/input_new_password"
                android:inputType="textPassword"
                android:maxHeight="44dp"
                android:maxLength="50"
                android:minHeight="44dp"
                android:padding="8dp"
                android:scrollbars="horizontal"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_hint"
                android:textCursorDrawable="@drawable/custom_cursor_drawable"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/icon_eye_selector"
            app:hintTextColor="@color/text_color_hint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password_again_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"

                android:background="@drawable/custom_edittext"
                android:hint="@string/input_again_password"
                android:inputType="textPassword"
                android:maxHeight="44dp"
                android:maxLength="50"
                android:minHeight="44dp"
                android:padding="8dp"
                android:scrollbars="horizontal"

                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color_hint"
                android:textCursorDrawable="@drawable/custom_cursor_drawable"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/confirm_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/custom_button_border_round"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>