<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="10"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Intro.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">


        <ImageView
            android:layout_marginTop="100dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_logo_colorful" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/droid_sans_mono"
            android:text=""
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/des_sign_in"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:text="Số điện thoại"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:background="@drawable/custom_background_white_border_white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text">
                <EditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:paddingLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/edittext_email_login"

                    android:minHeight="44dp"
                    android:maxHeight="44dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_hint"
                    android:hint="Nhập nội dung"
                    android:padding="8dp"
                    android:background="@drawable/custom_edittext_border_left"

                    android:inputType="phone"
                    android:scrollbars="horizontal"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/custom_cursor_drawable" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_marginTop="12dp"
            android:text="Mật khẩu"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_background_white_border_white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_baseline_lock_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleDrawable="@drawable/icon_eye_selector">
                <EditText
                    android:layout_marginRight="20dp"
                    android:id="@+id/edittext_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"

                    android:background="@drawable/custom_edittext_border_left"
                    android:hint="Nhập mật khẩu"
                    android:inputType="textPassword"
                    android:maxHeight="44dp"
                    android:maxLength="50"
                    android:minHeight="44dp"
                    android:scrollbars="horizontal"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_hint"
                    android:textCursorDrawable="@drawable/custom_cursor_drawable"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>


        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:buttonTint="@color/purple_primary"
                android:id="@+id/remember_me"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <TextView
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/text_color"
                android:text="@string/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/term_privacy_policy"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/term_privacy_policy"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:weightSum="10"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="6"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:clickable="true"
                    android:id="@+id/register_login"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="@drawable/custom_textview"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    tools:ignore="HardcodedText"/>
                <TextView
                    android:clickable="true"
                    android:id="@+id/reset_password_login"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/forget_password"
                    android:textAlignment="center"
                    android:textColor="@drawable/custom_textview"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    tools:ignore="HardcodedText"/>
            </LinearLayout>
            <Button
                android:id="@+id/login_login"
                android:background="@drawable/custom_button_border_round"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="ĐĂNG NHẬP"
                android:layout_width="120dp"
                android:layout_height="44dp"/>
        </LinearLayout>

        <TextView
            android:gravity="bottom"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/follow_more"
            android:textColor="@color/purple_primary"
            android:textSize="16sp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageButton
            android:id="@+id/facebook_login"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:src="@drawable/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/instagram_login"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:src="@drawable/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/twitter_login"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:src="@drawable/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>